Makeshift Fix for Overflow Issue on Content Page

--- a/public/index.css
+++ b/public/index.css
@@ -1,49 +1,49 @@
-*{
+* {
   padding: 0;
   margin: 0;
   user-select: none;
 }
 
-*:focus{
+*:focus {
   outline: none;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   background-color: #202020;
   width: 0.5rem;
 }
 
-@media only screen and (max-width: 768px){
-  ::-webkit-scrollbar{
+@media only screen and (max-width: 768px) {
+  ::-webkit-scrollbar {
     display: none;
   }
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background-color: #ffffff;
 }
 
-html{
+html {
   font-size: 10px;
   background-color: #202020;
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
 }
 
-@media only screen and (min-width: 1920px){
-  html{
+@media only screen and (min-width: 1920px) {
+  html {
     font-size: 11px;
   }
 }
 
-nav{
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-@media only screen and (max-width: 768px){
-  nav{
+@media only screen and (max-width: 768px) {
+  nav {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -51,25 +51,25 @@ nav{
   }
 }
 
-nav > h1{
+nav>h1 {
   font-size: 2.5rem;
   font-weight: 600;
 }
 
-@media only screen and (max-width: 768px){
-  nav > h1{
+@media only screen and (max-width: 768px) {
+  nav>h1 {
     font-size: 1.75rem;
   }
 }
 
-nav ul{
+nav ul {
   list-style: none;
   display: flex;
   gap: 4rem;
 }
 
-@media only screen and (max-width: 768px){
-  nav ul{
+@media only screen and (max-width: 768px) {
+  nav ul {
     /* flex-wrap: wrap;
     gap: 0.25rem 0.5rem; */
     gap: 0rem 1rem;
@@ -77,30 +77,30 @@ nav ul{
   }
 }
 
-nav ul li{
+nav ul li {
   font-size: 2.5rem;
   font-weight: 700;
-  color: rgba(255,255,255,0.5);
+  color: rgba(255, 255, 255, 0.5);
   transition: 0.3s ease;
 }
 
-@media only screen and (max-width: 768px){
-  nav ul li{
+@media only screen and (max-width: 768px) {
+  nav ul li {
     font-size: 3rem;
   }
 }
 
-nav ul li:hover{
-  color: rgba(255,255,255,1);
+nav ul li:hover {
+  color: rgba(255, 255, 255, 1);
   cursor: pointer;
 }
 
-nav ul .active{
-  color: rgba(255,255,255,1);
+nav ul .active {
+  color: rgba(255, 255, 255, 1);
 }
 
-.landing{
-  background: url('./landing.jpg'), rgba(0,0,0,0.3);
+.landing {
+  background: url('./landing.jpg'), rgba(0, 0, 0, 0.3);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -113,21 +113,21 @@ nav ul .active{
   align-items: center;
 }
 
-.landing > h1{
+.landing>h1 {
   position: fixed;
   top: 5rem;
   font-size: 2rem;
   font-weight: 600;
 }
 
-@media only screen and (max-width: 768px){
-  .landing > h1{
+@media only screen and (max-width: 768px) {
+  .landing>h1 {
     font-size: 2.5rem;
     top: 2.5rem;
   }
 }
 
-.landing .content{
+.landing .content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -135,7 +135,7 @@ nav ul .active{
   gap: 2.5rem;
 }
 
-.landing .content .header h1{
+.landing .content .header h1 {
   font-family: 'Playfair Display', serif;
   font-size: 5.5rem;
   font-weight: 400;
@@ -143,13 +143,13 @@ nav ul .active{
   text-align: center;
 }
 
-@media only screen and (max-width: 768px){
-  .landing .content .header h1{
+@media only screen and (max-width: 768px) {
+  .landing .content .header h1 {
     font-size: 5rem;
   }
 }
 
-.landing .content button{
+.landing .content button {
   font-size: 2rem;
   color: #202020;
   height: 5rem;
@@ -161,14 +161,14 @@ nav ul .active{
   text-transform: uppercase;
 }
 
-.landing .content button:hover{
+.landing .content button:hover {
   background-color: transparent;
   color: #ffffff;
   cursor: pointer;
 }
 
-@media only screen and (max-width: 768px){
-  .landing .content button{
+@media only screen and (max-width: 768px) {
+  .landing .content button {
     position: fixed;
     bottom: 2.5rem;
     font-size: 2.25rem;
@@ -179,7 +179,7 @@ nav ul .active{
   }
 }
 
-.page{
+.page {
   padding: 2.5rem;
   display: flex;
   flex-direction: column;
@@ -187,59 +187,63 @@ nav ul .active{
   overflow-x: hidden;
 }
 
-@media only screen and (max-width: 768px){
-  .page{
+@media only screen and (max-width: 768px) {
+  .page {
     gap: 1rem;
   }
 }
 
-.page > h1{
+.page-open {
+  height: 0;
+}
+
+.page>h1 {
   font-size: 7.5rem;
   text-transform: uppercase;
   font-weight: 600;
 }
 
-@media only screen and (max-width: 768px){
-  .page > h1{
+@media only screen and (max-width: 768px) {
+  .page>h1 {
     display: none;
   }
 }
 
-.page .page-content{
+.page .page-content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2.5rem 2rem;
 }
 
-@media only screen and (max-width: 768px){
-  .page .page-content{
+@media only screen and (max-width: 768px) {
+  .page .page-content {
     grid-template-columns: 1fr;
   }
 }
 
-@media only screen and (min-width: 1920px){
-  .page .page-content{
+@media only screen and (min-width: 1920px) {
+  .page .page-content {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-.page .page-card{
+.page .page-card {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-.page .page-card h1{
+.page .page-card h1 {
   font-size: 1.5rem;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 0.15rem;
 }
 
-.page .page-card .page-card-image{
+.page .page-card .page-card-image {
   padding: 1rem;
   height: 29rem;
-  background: url('./landing.jpg'), rgba(0,0,0,0.3);
+  background: url('./landing.jpg'), rgba(0, 0, 0, 0.3);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -247,21 +251,21 @@ nav ul .active{
   transition: 0.3s ease;
 }
 
-.page .page-card:hover{
+.page .page-card:hover {
   cursor: pointer;
 }
 
-.page .page-card:hover .page-card-image{
-  background-color: rgba(0,0,0,0.5);
+.page .page-card:hover .page-card-image {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-@media only screen and (max-width: 768px){
-  .page .page-card .page-card-image{
+@media only screen and (max-width: 768px) {
+  .page .page-card .page-card-image {
     height: 19rem;
   }
 }
 
-.item{
+.item {
   position: absolute;
   background-color: #202020;
   top: 0;
@@ -273,50 +277,50 @@ nav ul .active{
   gap: 4rem;
 }
 
-.item nav h1:hover{
+.item nav h1:hover {
   cursor: pointer;
 }
 
-.item div{
+.item div {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.item div h1{
+.item div h1 {
   font-size: 6rem;
   text-transform: uppercase;
   font-weight: 600;
   padding-bottom: 1rem;
 }
 
-@media only screen and (max-width: 768px){
-  .item div h1{
+@media only screen and (max-width: 768px) {
+  .item div h1 {
     font-size: 2.5rem;
   }
 }
 
-.item div .content-preview{
+.item div .content-preview {
   height: 90vh;
   width: 100%;
-  background-image: url('./landing.jpg');
+  background-image: gray;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-@media only screen and (max-width: 768px){
-  .item div .content-preview{
+@media only screen and (max-width: 768px) {
+  .item div .content-preview {
     height: 50vh;
   }
 }
 
-.item div p{
+.item div p {
   font-size: 1.5rem;
   text-transform: uppercase;
 }
 
-.item div button{
+.item div button {
   width: 30rem;
   height: 4rem;
   text-transform: uppercase;
@@ -328,18 +332,18 @@ nav ul .active{
   transition: 0.3s ease;
 }
 
-@media only screen and (max-width: 768px){
-  .item div button{
+@media only screen and (max-width: 768px) {
+  .item div button {
     width: 100%;
   }
 }
 
-.item div button:hover{
+.item div button:hover {
   background-color: #202020;
   color: #ffffff;
 }
 
-.item iframe{
+.item iframe {
   height: 100%;
   width: 100%;
 }
